feat: Implement admin registration and improve error handling
- Added admin registration functionality with creation of admin model and validation checks in `AdminRegister.js`.
- Enhanced error handling for Admin registration and login processes.
- Updated frontend call to handle server routes using .env for all Frontend files.
- Configured CORS settings in `index.js` to allow requests from any origin.

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:server": "npx nodemon src/server-side/index.js",
+    "start:client": "react-scripts start",
     "build": "webpack --resolve.alias zlib=browserify-zlib querystring=querystring-es3 path=path-browserify crypto=crypto-browserify stream=stream-browserify stream-http=stream-http url=url buffer=buffer/ util=util/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
