--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "firebase": "^11.6.0",
+    "firebase-admin": "^13.2.0",
     "framer-motion": "^12.6.3",
     "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -36,6 +38,7 @@
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
